# berrycrawl-rust

./: Cargo.toml  README.md  reference.md
.fern/: metadata.json
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  environment.rs  error.rs  lib.rs  prelude.rs
src/api/: mod.rs
src/api/resources/: mod.rs
src/api/resources/account/: account.rs  mod.rs
src/api/resources/brand/: brand.rs  mod.rs
src/api/types/: account_response.rs  account_response_data.rs  account_response_data_plan.rs  account_response_data_queue.rs  action_dto.rs  action_dto_direction.rs  action_dto_type.rs  agent_config_dto.rs  agent_config_dto_mode.rs  brand_asset.rs  brand_component_style.rs  brand_design_system.rs  brand_design_system_color_scheme.rs  brand_design_system_colors.rs  brand_design_system_components.rs  brand_design_system_images.rs  brand_design_system_spacing.rs  brand_design_system_typography.rs  brand_design_system_typography_font_families.rs  brand_design_system_typography_font_sizes.rs  brand_design_system_typography_font_stacks.rs  brand_dto.rs  brand_profile.rs  brand_profile_colors_item.rs  brand_profile_fonts_item.rs  brand_profile_socials_item.rs  brand_response.rs  brand_response_data.rs  brand_response_data_meta.rs  cancel_job_response.rs  cancel_job_response_data.rs  change_tracking_format_dto.rs  change_tracking_format_dto_type.rs  crawl_dto.rs  crawl_dto_sitemap.rs  create_webhook_dto.rs  extract_dto.rs  extract_webhook_config_dto.rs  get_query_request.rs  job_created_response.rs  (+56 more)
src/core/: http_client.rs  mod.rs
(+3 files in other folders)
